Revision history for Perl module Time::Duration

1.21 2019-05-11 NEILB
    - Added Time::Elapsed to SEE ALSO, suggested by Ron Savage in RT#122186.
    - Updated AUTHOR section to reflect that Neil Bowers is current maintainer.

1.20 2015-04-25 NEILB
    - Switched to Dist::Zilla, in the process fixing RT#90701, RT#101548,
      and RT#101434
    - Reformatted this file as per CPAN::Changes::Spec

1.1_01 2015-04-18 NEILB
    - This release had the changes in 1.20 above, done first as a developer
      release to see what CPAN Testers said.

1.1 2013-04-02 AVIF
    - Adding millisecond support.

1.06 2007-08-19 AVIF
    - Fixing Makefile

1.04 2006-07-23 AVIF
    - Reorganizing tests

1.03 2006-02-28 AVIF
    - Updating new maintainer information (AVIF took over from SBURKE)

1.02 2002-10-08 SBURKE
    - added concise().

1.01 2001-10-25 SBURKE
    - First release to CPAN
